syntax = "proto3";

package user;
option go_package = "./;userpb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc ListUsers(Empty) returns (ListUsersResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
}

message Empty {}